--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,8 @@ public/components
 npm-debug.log
 yarn-error.log
 ###< symfony/webpack-encore-bundle ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
