--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,11 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "alterphp/easyadmin-extension-bundle": "^2.0",
-        "api-platform/api-pack": "^1.1",
+        "api-platform/core": "^2.1",
+        "doctrine/annotations": "^1.0",
+        "doctrine/doctrine-bundle": "^1.12",
+        "doctrine/doctrine-migrations-bundle": "^3.0",
+        "doctrine/orm": "^2.7",
         "easycorp/easyadmin-bundle": "^2.0",
         "friendsofsymfony/user-bundle": "^2.1",
         "guzzlehttp/guzzle": "^6.3",
@@ -15,6 +19,8 @@
         "itk-dev/database-bundle": "^1.2",
         "itk-dev/web-accessibility-statement-bundle": "^1.0",
         "lexik/jwt-authentication-bundle": "^2.5",
+        "nelmio/cors-bundle": "^1.5",
+        "phpdocumentor/reflection-docblock": "^4.3",
         "phpoffice/phpspreadsheet": "^1.6",
         "sensio/framework-extra-bundle": "^5.2",
         "stof/doctrine-extensions-bundle": "^1.3",
@@ -27,10 +33,12 @@
         "symfony/form": "4.3.*",
         "symfony/framework-bundle": "4.3.*",
         "symfony/monolog-bundle": "^3.1",
-        "symfony/orm-pack": "*",
         "symfony/process": "4.3.*",
+        "symfony/property-access": "4.3.*",
+        "symfony/property-info": "4.3.*",
+        "symfony/proxy-manager-bridge": "4.3.*",
         "symfony/security-bundle": "4.3.*",
-        "symfony/serializer-pack": "*",
+        "symfony/serializer": "4.3.*",
         "symfony/swiftmailer-bundle": "^3.1",
         "symfony/twig-bundle": "4.3.*",
         "symfony/validator": "4.3.*",
@@ -40,10 +48,14 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.13",
-        "symfony/debug-pack": "*",
+        "phpunit/phpunit": "^8.5",
+        "symfony/browser-kit": "4.3.*",
+        "symfony/css-selector": "4.3.*",
+        "symfony/debug-bundle": "4.3.*",
         "symfony/maker-bundle": "^1.7",
-        "symfony/profiler-pack": "*",
-        "symfony/test-pack": "*",
+        "symfony/phpunit-bridge": "^6.1",
+        "symfony/stopwatch": "4.3.*",
+        "symfony/web-profiler-bundle": "4.3.*",
         "symfony/web-server-bundle": "*"
     },
     "config": {
@@ -51,7 +63,12 @@
             "*": "dist"
         },
         "sort-packages": true,
-        "component-dir": "public/components"
+        "component-dir": "public/components",
+        "allow-plugins": {
+            "ocramius/package-versions": true,
+            "robloach/component-installer": true,
+            "symfony/flex": true
+        }
     },
     "autoload": {
         "psr-4": {
