--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,12 +34,13 @@ services:
       - PHP_XDEBUG_REMOTE_CONNECT_BACK=${PHP_XDEBUG_REMOTE_CONNECT_BACK:-0}
       - PHP_MAX_EXECUTION_TIME=30
       - PHP_MEMORY_LIMIT=256M
+      - COMPOSER_VERSION=2
       # - PHP_MAIL=1 # Uncomment to enable mailhog.
       - DOCKER_HOST_DOMAIN=${COMPOSE_DOMAIN}
     depends_on:
       - mariadb
     volumes:
-      - .:/app:delegated
+      - nfsApp:/app:delegated
 
   nginx:
     image: nginx:latest
@@ -52,7 +53,7 @@ services:
       - '80'
     volumes:
       - ${PWD}/.docker/vhost.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./:/app:delegated
+      - nfsApp:/app:delegated
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=frontend"
@@ -75,7 +76,14 @@ services:
       - "1025"
       - "8025"
 
-  yarn:
-    image: itkdev/yarn:latest
-    volumes:
-      - .:/app:delegated
+volumes:
+    # Named volume requires that you have NFS shares enabled (performance boost on Macs).
+    # Use `itkdev-docker-compose nfs:enable` to enable NFS shares. If you don't want to use it remove it from here and
+    # change the volume mapping to use normal shares in the containers. See
+    # https://sean-handley.medium.com/how-to-set-up-docker-for-mac-with-native-nfs-145151458adc
+    nfsApp:
+        driver: local
+        driver_opts:
+            type: nfs
+            o: addr=host.docker.internal,rw,nolock,hard,nointr,nfsvers=3
+            device: ":$PWD"
