SERV-482: Updated migration configuration

--- a/.env
+++ b/.env
@@ -24,21 +24,23 @@ APP_SECRET=81813d42d22688b4f4766c9cdf60eb20
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
-# Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
-# For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
-# Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db:db@mariadb:3306/db
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+# DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
+DATABASE_URL="mysql://db:db@mariadb:3306/db"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL=smtp://mailhog:1025
+MAILER_URL="smtp://mailhog:1025"
 ###< symfony/swiftmailer-bundle ###
 
-EMAIL_SENDER_ADDRESS=info@ereolen-widget.example.com
-EMAIL_SENDER_NAME=ereolen-widget.example.com
+EMAIL_SENDER_ADDRESS="info@ereolen-widget.example.com"
+EMAIL_SENDER_NAME="ereolen-widget.example.com"
 
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN="^https?://localhost(:[0-9]+)?$"
@@ -54,4 +56,4 @@ JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 JWT_PASSPHRASE=593a3130bae9d5b01f8ab6cd5821ed83
 ###< lexik/jwt-authentication-bundle ###
 
-WEB_ACCESSIBILITY_STATEMENT_URL=https://www.was.digst.dk/widget-ereolen-dk
+WEB_ACCESSIBILITY_STATEMENT_URL="https://www.was.digst.dk/widget-ereolen-dk"
