--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "~7.2.0",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
         "alterphp/easyadmin-extension-bundle": "^2.0",
         "api-platform/core": "^2.1",
         "doctrine/annotations": "^1.0",
@@ -44,7 +45,7 @@
         "symfony/validator": "4.3.*",
         "symfony/web-link": "4.3.*",
         "symfony/webpack-encore-bundle": "^1.7",
-        "symfony/yaml": "4.3.*"
+        "symfony/yaml": "4.3.*",
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.13",
