--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "~7.2.0",
+        "php": "^7.2 | ^7.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-json": "*",
@@ -25,38 +25,38 @@
         "phpoffice/phpspreadsheet": "^1.6",
         "sensio/framework-extra-bundle": "^5.2",
         "stof/doctrine-extensions-bundle": "^1.3",
-        "symfony/asset": "4.3.*",
-        "symfony/cache": "4.3.*",
-        "symfony/console": "4.3.*",
-        "symfony/dotenv": "4.3.*",
-        "symfony/expression-language": "4.3.*",
+        "symfony/asset": "4.4.*",
+        "symfony/cache": "4.4.*",
+        "symfony/console": "4.4.*",
+        "symfony/dotenv": "4.4.*",
+        "symfony/expression-language": "4.4.*",
         "symfony/flex": "^1.3.1",
-        "symfony/form": "4.3.*",
-        "symfony/framework-bundle": "4.3.*",
+        "symfony/form": "4.4.*",
+        "symfony/framework-bundle": "4.4.*",
         "symfony/monolog-bundle": "^3.1",
-        "symfony/process": "4.3.*",
-        "symfony/property-access": "4.3.*",
-        "symfony/property-info": "4.3.*",
-        "symfony/proxy-manager-bridge": "4.3.*",
-        "symfony/security-bundle": "4.3.*",
-        "symfony/serializer": "4.3.*",
+        "symfony/process": "4.4.*",
+        "symfony/property-access": "4.4.*",
+        "symfony/property-info": "4.4.*",
+        "symfony/proxy-manager-bridge": "4.4.*",
+        "symfony/security-bundle": "4.4.*",
+        "symfony/serializer": "4.4.*",
         "symfony/swiftmailer-bundle": "^3.1",
-        "symfony/twig-bundle": "4.3.*",
-        "symfony/validator": "4.3.*",
-        "symfony/web-link": "4.3.*",
+        "symfony/twig-bundle": "4.4.*",
+        "symfony/validator": "4.4.*",
+        "symfony/web-link": "4.4.*",
         "symfony/webpack-encore-bundle": "^1.7",
-        "symfony/yaml": "4.3.*",
+        "symfony/yaml": "4.4.*"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.13",
+        "friendsofphp/php-cs-fixer": "^3.4",
         "phpunit/phpunit": "^8.5",
-        "symfony/browser-kit": "4.3.*",
-        "symfony/css-selector": "4.3.*",
-        "symfony/debug-bundle": "4.3.*",
+        "symfony/browser-kit": "4.4.*",
+        "symfony/css-selector": "4.4.*",
+        "symfony/debug-bundle": "4.4.*",
         "symfony/maker-bundle": "^1.7",
         "symfony/phpunit-bridge": "^6.1",
-        "symfony/stopwatch": "4.3.*",
-        "symfony/web-profiler-bundle": "4.3.*",
+        "symfony/stopwatch": "4.4.*",
+        "symfony/web-profiler-bundle": "4.4.*",
         "symfony/web-server-bundle": "*"
     },
     "config": {
@@ -104,13 +104,13 @@
         "check-coding-standards/php-cs-fixer": [
             "php -n vendor/bin/php-cs-fixer --config=.php_cs.dist fix --dry-run"
         ],
-        "check-coding-standards": [
+        "coding-standards-check": [
             "@check-coding-standards/php-cs-fixer"
         ],
         "apply-coding-standards/php-cs-fixer": [
             "php -n vendor/bin/php-cs-fixer --config=.php_cs.dist fix"
         ],
-        "apply-coding-standards": [
+        "coding-standards-apply": [
             "@apply-coding-standards/php-cs-fixer"
         ]
     },
@@ -121,7 +121,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": true,
-            "require": "4.3.*"
+            "require": "4.4.*"
         }
     }
 }
